[Fix] Scrollbar color

--- a/app/globals.css
+++ b/app/globals.css
@@ -32,6 +32,7 @@ body {
 
 * {
   scrollbar-width: thin;
+  scrollbar-color: #d8b4fe transparent;
   box-sizing: border-box;
 }
 
